Bug 210550 - [GTK4] Fix use of gtk init functions
Summary: [GTK4] Fix use of gtk init functions
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: Gtk
Depends on:
Blocks: GTK4
  Show dependency treegraph
 
Reported: 2020-04-15 08:29 PDT by Carlos Garcia Campos
Modified: 2020-04-16 05:45 PDT (History)
8 users (show)

See Also:


Attachments
Patch (5.66 KB, patch)
2020-04-15 08:33 PDT, Carlos Garcia Campos
aperez: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Carlos Garcia Campos 2020-04-15 08:29:21 PDT
Add gtk_init and gtk_init_check receiving parameters to GtkVersioning
Comment 1 Carlos Garcia Campos 2020-04-15 08:33:22 PDT
Created attachment 396539 [details]
Patch

Patch doesn't include the plugin process main (because we should disable plugin process in gtk4) and MiniBrowser that should probably use GtkApplication instead.
Comment 2 Carlos Garcia Campos 2020-04-15 09:06:28 PDT
Committed r260132: <https://trac.webkit.org/changeset/260132>
Comment 3 Philippe Normand 2020-04-16 04:50:59 PDT
Why was this landed with red EWS?

A clean build fails here, same as in the EWS:


../../../Tools/TestWebKitAPI/gtk/main.cpp:29:10: fatal error: 'WebCore/GtkVersioning.h' file not found
#include <WebCore/GtkVersioning.h>
         ^~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.

$ find WebKitBuild/GTK/ -name GtkVersioning.h
$
Comment 4 Carlos Garcia Campos 2020-04-16 05:45:54 PDT
(In reply to Philippe Normand from comment #3)
> Why was this landed with red EWS?

Because I fixed the build error before landing, at least locally.

> A clean build fails here, same as in the EWS:
> 
> 
> ../../../Tools/TestWebKitAPI/gtk/main.cpp:29:10: fatal error:
> 'WebCore/GtkVersioning.h' file not found
> #include <WebCore/GtkVersioning.h>
>          ^~~~~~~~~~~~~~~~~~~~~~~~~
> 1 error generated.
> 
> $ find WebKitBuild/GTK/ -name GtkVersioning.h
> $

That's different error, we should probably make WebCore a dependency of TestWebKitAPI to ensure the forwarding header is generated before.