[GTK4] Fix use of gtk init functions https://bugs.webkit.org/show_bug.cgi?id=210550

Reviewed by Adrian Perez de Castro.

Source/WebCore:

Add gtk_init and gtk_init_check receiving parameters to GtkVersioning.

* PlatformGTK.cmake:
* platform/graphics/PlatformDisplay.cpp:
* platform/gtk/GtkVersioning.h:
(gtk_init):
(gtk_init_check):

Source/WebKit:

Include GtkVersioning.h instead of gtk.h

* WebProcess/gtk/WebProcessMainGtk.cpp:

Tools:

Include GtkVersioning.h instead of gtk.h.

* TestWebKitAPI/Tests/WebKitGtk/AccessibilityTestServer.cpp:
* TestWebKitAPI/Tests/WebKitGtk/InspectorTestServer.cpp:
* TestWebKitAPI/gtk/main.cpp:
* WebKitTestRunner/gtk/main.cpp:

Canonical link: https://commits.webkit.org/223425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260132 268f45cc-cd09-0410-ab3c-d52691b4dbfc