Tools/TestWebKitAPI/Tests/WebKitGtk/InspectorTestServer.cpp
@@ -24,7 +24,7 @@
 
 #include "config.h"
 
-#include <gtk/gtk.h>
+#include <WebCore/GtkVersioning.h>
 #include <webkit2/webkit2.h>
 
 int main(int argc, char** argv)
